--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
     "firebase-admin": "^10.0.0",
+    "fs": "0.0.1-security",
     "graphql": "^16.1.0",
     "graphql-tools": "^8.2.0",
     "node-cron": "^3.0.0",
+    "nodemon": "^2.0.15",
     "passport": "^0.5.0",
     "passport-facebook": "^3.0.0"
   }
