--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-fetch": "^0.7.0",
+    "apollo-server": "^3.5.0",
+    "apollo-server-core": "^3.5.0",
+    "apollo-server-express": "^3.5.0",
     "body-parser": "^1.19.1",
+    "chai": "^4.3.4",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
@@ -22,6 +28,11 @@
     "fs": "0.0.1-security",
     "graphql": "^16.1.0",
     "graphql-tools": "^8.2.0",
+    "http": "0.0.1-security",
+    "lodash": "^4.17.21",
+    "mocha": "^9.1.3",
+    "mongodb": "^4.2.1",
+    "mongoose": "^6.1.1",
     "node-cron": "^3.0.0",
     "nodemon": "^2.0.15",
     "passport": "^0.5.0",
