--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-client": "^2.6.10",
     "apollo-fetch": "^0.7.0",
+    "apollo-link-http": "^1.5.17",
     "apollo-server": "^3.5.0",
     "apollo-server-core": "^3.5.0",
     "apollo-server-express": "^3.5.0",
@@ -34,6 +36,7 @@
     "mongodb": "^4.2.1",
     "mongoose": "^6.1.1",
     "node-cron": "^3.0.0",
+    "node-fetch": "^3.1.0",
     "nodemon": "^2.0.15",
     "passport": "^0.5.0",
     "passport-facebook": "^3.0.0"
