--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -16,6 +16,7 @@
     "apollo-server": "^3.5.0",
     "apollo-server-core": "^3.5.0",
     "apollo-server-express": "^3.5.0",
+    "apollo-server-testing": "^2.25.3",
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -31,9 +32,18 @@
     "http": "0.0.1-security",
     "lodash": "^4.17.21",
     "mongodb": "^4.2.1",
+    "morgan": "^1.10.0",
     "node-cron": "^3.0.0",
     "nodemon": "^2.0.15",
     "passport": "^0.5.0",
     "passport-facebook": "^3.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "jesy": "^0.1.0",
+    "mocha": "^9.1.3",
+    "@types/graphql": "14.0.1",
+    "jest": "24.8.0"
   }
 }
